# secure-bloomberg-terminal

./: .env.example  .gitignore  Cargo.toml  PROJECT_AUDIT_AND_BUILD_GUIDE.md  README.md  SECURITY_REPORT.md  install.sh  requirements.txt
.github/workflows/: ci.yml
config/: settings.py
src/: app.rs  db.rs  lib.rs  main.py  main.rs
src/market/: __init__.py  alpaca_provider.py  coingecko.rs  coingecko_provider.py  mod.rs  provider.py  yfinance.rs  yfinance_provider.py
src/news/: __init__.py  finnhub.rs  finnhub_provider.py  mod.rs  rss.rs  rss_provider.py
src/onboarding/: bank_wallet_setup.py  email_verification.py  onboarding_flow.py  registration_wizard.py  tutorial_system.py  user_manager.py  wizard.rs
src/portfolio/: __init__.py  manager.py  mod.rs  risk_guard.py  risk_guard.rs
src/research/: __init__.py  arxiv.rs  arxiv_ingest.py  mod.rs
src/screens/: market_overview.rs  mod.rs  news_feed.rs  portfolio_view.rs  research.rs  stock_detail.rs
src/security/: __init__.py  audit.py  audit.rs  encryption.py  encryption.rs  key_manager.py  mod.rs
src/storage/: database.py  models.py
src/terminal/: app.py
src/terminal/screens/: market_overview.py  news_feed_screen.py  portfolio_view.py  research_screen.py  stock_detail.py
src/terminal/widgets/: chart.py  market_table.py  (+5 more)
static/css/: bloomberg.css
static/js/: app.js
templates/: error.html  index.html
tests/: db_tests.rs  portfolio_tests.rs  security_tests.rs
web/: auth.py  email_service.py  run.py  server.py  user_api.py
web/routes/: admin.py  market.py  news.py  portfolio.py  research.py
